redirecting process error stream to output and to job output